# progressive-computing

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  ipgc_test.sh
CMake/: Ascend.cmake  FindFFMPEG.cmake
include/: ConstDefine.h  DecisionTree.h  DecisionTreeNode.h  MultipleQuery.h  Object.h  PreProcess.h  Sensor.h  SimpleNetwork.h  Transmitter.h  Util.h
input/AirQuality/: attribute_cost_proc.txt  attribute_cost_trans.txt  query_attributes.txt  single_query.txt  statistics.txt
input/HT_Sensor/: attribute_cost.txt  test_data_200  train_data_200  tree.dot
input/HT_Sensor/network1/: attribute_cost_proc  sensor_attribute  sensor_object  sensor_object_0  sensor_object_1  sensor_object_2  sensor_object_3  sensor_object_4  sensor_object_5  sensor_object_6  sensor_object_7  sensor_object_8  sensor_object_9  sensor_transmitter
input/Healthy/: attribute_cost.txt
input/Healthy/network_attribute_2-4/: decision_tree.dot  sensor_attribute  sensor_object  sensor_transmitter  test_data.txt  train_data.txt
input/Healthy/network_attribute_2-8/: attribute_cost_proc  decision_tree.dot  sensor_attribute  sensor_object  sensor_transmitter  test_data.txt  train_data.txt
input/Healthy/network_attribute_5-8/: decision_tree.dot  sensor_attribute  sensor_object  sensor_transmitter  test_data.txt  train_data.txt
input/wilt/: attribute_cost.txt  test_data  train_data  tree.dot
src/: DecisionTree.cpp  DecisionTreeNode.cpp  MultipleQuery.cpp  Object.cpp  PreProcess.cpp  Sensor.cpp  SimpleNetwork.cpp  Transmitter.cpp  Util.cpp  main.cpp
(+3 files in other folders)
